--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <footer>
         <p>&copy; 2024 Educación Matemática</p>
         <p>Gustavo Toabanda</p>
+        <a href="https://black-rosamond-14.tiiny.site/" target="_blank">Visita nuestro sitio</a>
     </footer>
     <script src="script.js"></script>
 </body>
